// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkTableHeadCell should render correctly 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          class="bpk-table__cell bpk-table__cell--head"
        >
          Heading
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          class="bpk-table__cell bpk-table__cell--head"
          data-foo="bar"
          id="my-custom-id"
        >
          Skyscanner
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          class="bpk-table__cell bpk-table__cell--head my-custom-class"
        >
          Skyscanner
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with no-wrap 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          class="bpk-table__cell bpk-table__cell--head bpk-table__cell--no-wrap"
        >
          Heading
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
